--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -9,4 +9,29 @@
     <%= client.last_name %>
   </p>
 
+  <p>
+    <strong>Email:</strong>
+    <%= client.email %>
+  </p>
+
+  <p>
+    <strong>Phone number:</strong>
+    <%= client.phone_number %>
+  </p>
+
+  <p>
+    <strong>Password digest:</strong>
+    <%= client.password_digest %>
+  </p>
+
+  <p>
+    <strong>Confirm password:</strong>
+    <%= client.confirm_password %>
+  </p>
+
+  <p>
+    <strong>Employee:</strong>
+    <%= client.employee_id %>
+  </p>
+
 </div>
