--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -22,6 +22,31 @@
   </div>
 
   <div>
+    <%= form.label :email, style: "display: block" %>
+    <%= form.text_field :email %>
+  </div>
+
+  <div>
+    <%= form.label :phone_number, style: "display: block" %>
+    <%= form.number_field :phone_number %>
+  </div>
+
+  <div>
+    <%= form.label :password_digest, style: "display: block" %>
+    <%= form.text_field :password_digest %>
+  </div>
+
+  <div>
+    <%= form.label :confirm_password, style: "display: block" %>
+    <%= form.text_field :confirm_password %>
+  </div>
+
+  <div>
+    <%= form.label :employee_id, style: "display: block" %>
+    <%= form.number_field :employee_id %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
